[package]
name = "overskride"
version = "0.3.1"
edition = "2021"

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
bluer = { version = "0.16.1", features = ["full"] }
futures = { version = "0.3.28", features = ["futures-executor"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7.2", package = "gtk4", features = ["blueprint"] }
log = "0.4.20"
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
pretty_env_logger = "0.5.0"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
