[package]
name = "overskride"
version = "0.3.2"
edition = "2021"

[dependencies]
adw = { version = "0.5.3", package = "libadwaita", features = ["v1_4"] }
bluer = { version = "0.16.1", features = ["full"] }
dbus = "0.9.7"
dbus-crossroads = "0.5.2"
futures = { version = "0.3.28", features = ["futures-executor"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.7.2", package = "gtk4", features = ["blueprint"] }
phf = { version = "0.11.2", features = ["phf_macros", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"

